@@ -1,3 +1,8 @@
+2012-01-11 Niels Grewe <niels.grewe@halbordnung.de>
+
+	* GSSkipMutableArray.m: Change -initWithObjects:count: declaration
+	to match the superclass one in gnustep-base trunk.
+
 2011-10-25 Richard Frith-Macdonald  <rfm@gnu.org>
 
 	* GSFIFO.h:
